--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.purdue.agrawa49.proxyhunt" >
+    package="edu.purdue.agrawa49.proxyhunt">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,8 +18,8 @@
         </activity>
         <activity
             android:name=".PostRequest"
-            android:label="@string/title_activity_post_request" >
-        </activity>
+            android:label="@string/title_activity_post_request" />
+        <activity android:name=".AcceptRequest"></activity>
     </application>
 
 </manifest>
