--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="edu.purdue.agrawa49.proxyhunt">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,7 +21,8 @@
         <activity
             android:name=".PostRequest"
             android:label="@string/title_activity_post_request" />
-        <activity android:name=".AcceptRequest"></activity>
+        <activity android:name=".AcceptRequest" />
+        <activity android:name=".TableView"></activity>
     </application>
 
 </manifest>
