--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
         <activity
             android:name=".PostRequest"
-            android:label="@string/title_activity_post_request" />
+            android:label="@string/app_name" />
         <activity android:name=".AcceptRequest" />
         <activity android:name=".TableView"></activity>
     </application>
